# SVM-PPI-predictor

./: .gitignore  README.md
data/: filtered.csv  processed.csv  sequence_metrics.json  sequences.json  svm_features.csv
ppi_predict/: Cargo.toml  pyproject.toml
ppi_predict/data_processing/: extract.py  filter_df_sequences.py  get_sequence.py
ppi_predict/svm/: run_svm_from_json.py
