[project]
name = "ppi-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "biobase>=0.9.0",
    "goombay>=0.24.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
